Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.4.7.7: August 11, 2008

* Disable fakeroot tests due to odd behaviour, and the fact it's currently
  unused.

* Fix installation issue for manpages for python2.4; os.path.join behaviour
  differs between 2.4 and 2.5.

* Kill off large memory leak that reared it's head per pkg merge; still is
  a bit of a leak remaining, but nothing near as bad as before.


pkgcore 0.4.7.6: August 10, 2008

* fix sandbox complaint when PORT_LOGDIR is enabled- sandbox requires abspath
  for any SANDBOX_WRITE exemptions, if PORT_LOGDIR path includes symlinks,
  force a `readlink -f` of the sandbox exemption.
  http://forums.gentoo.org/viewtopic-p-5176414.html

* ticket 213; if stricter is in FEATURES, fail out if insecure rpath is
  detected- otherwise, correct the entries.

* ticket 207; drop the attempted known_keys/cache optimizations, instead
  defer to parent's iterkeys always.  This eliminates the concurrency issue,
  and simplifies staleness detection.  Also kills off a tb for --newuse .

* ticket 201; pquery --restrict-revdep-pkgs wasn't behaving properly for
  slot/repository/user atoms, now does.

* Correct potential segfaults in cpython version of PackageRestriction and
  StrExactMatch's __(eq|ne)__ implementations.


pkgcore 0.4.7.5: July 6, 2008

* incremental_expansion and friends have grown a cpython implementation-
  this speedup will show up if you are doing lots of profile work (pcheck
  for example, which has to read effectively all profile).

* if the invoking user isn't part of the portage group, don't throw a
  traceback due to permission denied for virtuals cache.

* correct a false positive in pkgcore.test.util.test_commandline that occurs
  when snakeoil c extensions aren't enabled.

* ticket 193; follow symlinks in /etc/portage/*/ directories.

* ticket 203; functionfoo() {:;} is not function 'foo', it's 'functionfoo'.