@@ -38,7 +38,11 @@ def generate_depset(c, key, non_package_type, s, **kwds):
             return conditionals.DepSet(s.data.pop(key, ""), c,
                 operators={"||":boolean.OrRestriction,
                 "":boolean.AndRestriction}, **kwds)
-        kwds['element_func'] = _eapi_limited_atom_kls[s.eapi]
+        try:
+            kwds['element_func'] = _eapi_limited_atom_kls[s.eapi]
+        except IndexError:
+            raise metadata_errors.MetadataException(s, 'eapi',
+                "unsupported eapi")
         return conditionals.DepSet(s.data.pop(key, ""), c, **kwds)
     except conditionals.ParseError, p:
         raise metadata_errors.MetadataException(s, str(key), str(p))
